--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,12 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+}
+
+input, select {
+  box-sizing: border-box;
+  font-size: 16px;
 }
 
 body {
@@ -36,4 +42,26 @@ h2 {
 
 button:hover {
   opacity: 0.6;
+}
+
+[data-animation=shake] {
+  animation: shake var(--animation-duration, 0.5s) ease-in-out;
+}
+
+@keyframes shake {
+  0% { transform: translateX(0) }
+  25% { transform: translateX(5px) }
+  50% { transform: translateX(-5px) }
+  75% { transform: translateX(5px) }
+  100% { transform: translateX(0) }
+}
+
+[data-animation=pulse] {
+  animation: pulse var(--animation-duration, 0.4s) cubic-bezier(0.4, 0, 0.6, 1);
+}
+
+@keyframes pulse {
+  50% {
+    scale: 1.4;
+  }
 }
